# kleopatra

./: .arcconfig  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .yamllint.yml  CMakeLists.txt  COPYING  COPYING.DOC  ConfigureChecks.cmake  Messages.sh  README.packagers  config-kleopatra.h.cmake  config-kleopatra.h.in  cppcheck-suppressions.xml  kleopatra.categories  kleopatra.renamecategories  snapcraft.yaml  version-kleopatra.h.cmake  version-kleopatra.h.in
autotests/: CMakeLists.txt  keyparameterstest.cpp  kuniqueservicetest.cpp  stripsuffixtest.cpp
src/: CMakeLists.txt  aboutdata.cpp  aboutdata.h  crlview.cpp  crlview.h  kleo-assuan.h  kleopatra.rc  kleopatra.w32-manifest.in  kleopatra_options.h  kleopatraapplication.cpp  kleopatraapplication.h  main.cpp  mainwindow.cpp  mainwindow.h  systrayicon.cpp  systrayicon.h  versioninfo.rc.in
src/accessibility/: accessiblelink.cpp  accessiblelink_p.h  accessiblerichtextlabel.cpp  accessiblerichtextlabel_p.h  accessiblevaluelabel.cpp  accessiblevaluelabel_p.h  accessiblewidgetfactory.cpp  accessiblewidgetfactory.h
src/commands/: addadskcommand.cpp  addadskcommand.h  addsubkeycommand.cpp  addsubkeycommand.h  adduseridcommand.cpp  adduseridcommand.h  authenticatepivcardapplicationcommand.cpp  authenticatepivcardapplicationcommand.h  cardcommand.cpp  cardcommand.h  cardcommand_p.h  certificatetocardcommand.cpp  certificatetocardcommand.h  certificatetopivcardcommand.cpp  certificatetopivcardcommand.h  certifycertificatecommand.cpp  certifycertificatecommand.h  certifygroupcommand.cpp  certifygroupcommand.h  changeexpirycommand.cpp  changeexpirycommand.h  changeownertrustcommand.cpp  changeownertrustcommand.h  changepassphrasecommand.cpp  changepassphrasecommand.h  changepincommand.cpp  changepincommand.h  changeroottrustcommand.cpp  changeroottrustcommand.h  checksumcreatefilescommand.cpp  checksumcreatefilescommand.h  checksumverifyfilescommand.cpp  checksumverifyfilescommand.h  clearcrlcachecommand.cpp  clearcrlcachecommand.h  command.cpp  command.h  command_p.h  createcsrforcardkeycommand.cpp  createcsrforcardkeycommand.h  (+107 more)
src/conf/: CMakeLists.txt  appearanceconfigpage.cpp  appearanceconfigpage.h  appearanceconfigwidget.cpp  appearanceconfigwidget.h  appearanceconfigwidget.ui  configuredialog.cpp  configuredialog.h  cryptooperationsconfigpage.cpp  cryptooperationsconfigpage.h  cryptooperationsconfigwidget.cpp  cryptooperationsconfigwidget.h  dirservconfigpage.cpp  dirservconfigpage.h  gnupgsystemconfigurationpage.cpp  gnupgsystemconfigurationpage.h  groupsconfigdialog.cpp  groupsconfigdialog.h  groupsconfigpage.cpp  groupsconfigpage.h  groupsconfigwidget.cpp  groupsconfigwidget.h  kcm_gnupgsystemconfigurationpage.cpp  kleoconfigmodule.cpp  kleoconfigmodule.h  kleopageconfigdialog.cpp  kleopageconfigdialog.h  kleopatra_config_appear.desktop  kleopatra_config_cryptooperations.desktop  kleopatra_config_dirserv.desktop  kleopatra_config_gnupgsystem.desktop  kleopatra_config_gnupgsystem.json  kleopatra_config_groups.desktop  kleopatra_config_smimevalidation.desktop  kmessageboxdontaskagainstorage.cpp  kmessageboxdontaskagainstorage.h  labelledwidget.cpp  labelledwidget.h  pluralhandlingspinbox.cpp  pluralhandlingspinbox.h  (+7 more)
src/crypto/: autodecryptverifyfilescontroller.cpp  autodecryptverifyfilescontroller.h  certificateresolver.cpp  certificateresolver.h  checksumsutils_p.cpp  checksumsutils_p.h  controller.cpp  controller.h  createchecksumscontroller.cpp  createchecksumscontroller.h  decryptverifyemailcontroller.cpp  decryptverifyemailcontroller.h  decryptverifyfilescontroller.cpp  decryptverifyfilescontroller.h  decryptverifytask.cpp  decryptverifytask.h  encryptemailcontroller.cpp  encryptemailcontroller.h  encryptemailtask.cpp  encryptemailtask.h  newsignencryptemailcontroller.cpp  newsignencryptemailcontroller.h  recipient.cpp  recipient.h  sender.cpp  sender.h  signemailcontroller.cpp  signemailcontroller.h  signemailtask.cpp  signemailtask.h  signencryptfilescontroller.cpp  signencryptfilescontroller.h  signencryptfilestask.cpp  signencryptfilestask.h  signencrypttask.cpp  signencrypttask.h  task.cpp  task.h  task_p.h  taskcollection.cpp  (+3 more)
src/data/: kleopatra-mime.xml  kleopatra_decryptverifyfiles.desktop  kleopatra_decryptverifyfolders.desktop  kleopatra_import.desktop  kleopatra_signencryptfiles.desktop  kleopatra_signencryptfolders.desktop  org.kde.kleopatra.appdata.xml  org.kde.kleopatra.desktop
src/dialogs/: addemaildialog.cpp  addemaildialog.h  addsubkeydialog.cpp  addsubkeydialog.h  adduseriddialog.cpp  adduseriddialog.h  adduseriddialog.ui  animatedexpander.cpp  animatedexpander.h  cardinfotab.cpp  cardinfotab.h  certificatedetailsdialog.cpp  certificatedetailsdialog.h  certificatedetailsdialog.ui  certificatedetailsinputwidget.cpp  certificatedetailsinputwidget.h  certificatedetailswidget.cpp  certificatedetailswidget.h  certificatedetailswidget.ui  certificatedumpwidget.cpp  certificatedumpwidget.h  certificateselectiondialog.cpp  certificateselectiondialog.h  certificationoptionswidget.ui  certifycertificatedialog.cpp  certifycertificatedialog.h  certifycertificatedialog_p.h  certifywidget.cpp  certifywidget.h  choosecertificateprotocoldialog.cpp  choosecertificateprotocoldialog.h  copytosmartcarddialog.cpp  copytosmartcarddialog.h  createcsrforcardkeydialog.cpp  createcsrforcardkeydialog.h  csrcreationresultdialog.cpp  csrcreationresultdialog.h  debugdialog.cpp  debugdialog.h  deletecertificatesdialog.cpp  (+61 more)
src/icons/: CMakeLists.txt
src/interfaces/: anchorprovider.h  focusfirstchild.h
src/kcfg/: emailoperationspreferences.kcfg  fileoperationspreferences.kcfg  settings.kcfg  settings.kcfgc  smimevalidationpreferences.kcfg  tagspreferences.kcfg  tagspreferences.kcfgc
src/kconf_update/: CMakeLists.txt
src/kwatchgnupg/: CMakeLists.txt  aboutdata.cpp  aboutdata.h  kdlogtextwidget.cpp  (+11 more)
tests/: CMakeLists.txt  kleo_test.h  test.data  test.data.sig  test_filenamerequester.cpp  test_keylistmodels.cpp  test_uiserver.cpp  test_useridlistmodels.cpp  test_verify.cpp
(+521 files in other folders)
